--- a/styles.css
+++ b/styles.css
@@ -2,46 +2,78 @@
 /* Styles de base */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    color: #333;
+    background-color: #263aec;
+    color: #f2f6f5;
 }
 
 header {
-    background-color: #333;
-    color: #afa8a8;
+    background-color: #1c698c;
+    color: #f3eeee;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
     
-    padding: 10px 0;
+    padding: 5px 0;
 }
 
 h1 {
-    font-size: 45px;
+    
     text-align: center;
 }
 
 
-a {
-    font-size: 25px;
+button {
+    font-size: 35px;
     text-decoration: none;
     text-align: left;
-    color: #fff;
+    color: #f8f6f6;
+    background-color: #1c698c;
+    text-align: left;
+    position: absolute;
+    bottom:  125px; 
+    right:  230px;
 }
 
 main {
-    text-align: left;
-    font-size: 15px;
     
+    font-size: 45px;
+    font-size: 22px;
+    text-align: left;
+    
+    
+}
+h2 {
+    
+    font-size: 45px;
+    font-size: 22px;
+    text-align: left;
+     
+    line-height: 30px;
+    position: absolute;
+    right: 550px;
+    top: 200px; 
+    left: 20px;
 }
 img{
     float: right;
+    margin-top: 160px;
+    margin-right: 100px;
     
-    height: 200px;
-    width: 200px;
+    height: 600px;
+    width: 400px;
 }
 
 /* Footer */
 footer {
-    background-color: #333;
+    background-color: #1c698c;
     color: #fff;
     text-align: center;
+    font-size: 20px;
+    position: absolute;
+    bottom: 0;
+    left: 0px;
+    width: 100%;
     padding: 20px 0;
+
 }
