--- a/stylesMatelo.css
+++ b/stylesMatelo.css
@@ -48,7 +48,7 @@ h4 {
 }
 
 
-button {
+#contact-btn-1 {
     font-size: 35px;
     text-decoration: none;
     text-align: left;
@@ -56,8 +56,52 @@ button {
     background-color: #1c698c;
     text-align: left;
     position: absolute;
-    bottom:  125px; 
-    right:  230px;
+    bottom:  150px; 
+    right:  100px;
+}
+#contact-btn-2 {
+    font-size: 35px;
+    text-decoration: none;
+    text-align: left;
+    color: #f8f6f6;
+    background-color: #1c698c;
+    text-align: left;
+    position: absolute;
+    bottom:  150px; 
+    right:  480px;
+}
+#contact-btn-3 {
+    font-size: 35px;
+    text-decoration: none;
+    text-align: left;
+    color: #f8f6f6;
+    background-color: #1c698c;
+    text-align: left;
+    position: absolute;
+    bottom:  150px; 
+    right:  880px;
+}
+#contact-btn-4 {
+    font-size: 35px;
+    text-decoration: none;
+    text-align: left;
+    color: #f8f6f6;
+    background-color: #1c698c;
+    text-align: left;
+    position: absolute;
+    bottom:  150px; 
+    right:  1270px;
+}
+#contact-btn-5{
+    font-size: 35px;
+    text-decoration: none;
+    text-align: left;
+    color: #f8f6f6;
+    background-color: #1c698c;
+    text-align: left;
+    position: absolute;
+    bottom:  150px; 
+    right:  1660px;
 }
 
 main {
@@ -80,22 +124,22 @@ h2 {
     top: 200px; 
     left: 20px;
 }
-img{
-    float: right;
-    margin-top: 160px;
-    margin-right: 100px;
+
+
+.image-row {
+    display: flex; 
+    justify-content: space-between; 
+    gap: 10px; 
+    position: absolute;
     
-    height: 600px;
-    width: 400px;
-}
-#img2{
+    top: 200px; 
     
-    margin-top: 0px;
-    margin-right: px;
-    
-    height: 200px;
-    width: 400px;
-}
+  }
+  
+  .image-row img {
+    width: 18%; 
+    height: auto; 
+  }
 
 /* Footer */
 footer {
