--- a/stylesMatelo.css
+++ b/stylesMatelo.css
@@ -2,7 +2,7 @@
 /* Styles de base */
 body {
     font-family: Arial, sans-serif;
-    background-color: #263aec;
+    background-color: #404dc5;
     color: #f2f6f5;
 }
 
