--- a/stylesMatelo.css
+++ b/stylesMatelo.css
@@ -1,4 +1,3 @@
-/* Réinitialisa
 /* Styles de base */
 body {
     font-family: Arial, sans-serif;
@@ -47,6 +46,9 @@ h4 {
 
 }
 
+#link {
+    color: #00FFFF;
+}
 
 #contact-btn-1 {
     font-size: 35px;
