--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
+/* Réinitialisa
 /* Styles de base */
-
 body {
     font-family: Arial, sans-serif;
-    background-color: #404dc5;
+    background-color: #263aec;
     color: #f2f6f5;
 }
 
@@ -13,25 +13,13 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    padding: 5px 0;
+    
+    padding: 10px 0;
 }
 
 h1 {
     
     text-align: center;
-}
-
-h2 {
-    
-    font-size: 45px;
-    font-size: 22px;
-    text-align: left;
-     
-    line-height: 30px;
-    position: absolute;
-    right: 550px;
-    top: 200px; 
-    left: 20px;
 }
 
 h3 {
@@ -46,7 +34,6 @@ h3 {
     width: 100%;
 
 }
-
 h4 {
 
     
@@ -67,19 +54,10 @@ button {
     text-align: left;
     color: #f8f6f6;
     background-color: #1c698c;
+    text-align: left;
     position: absolute;
     bottom:  125px; 
     right:  230px;
-}
-
-#buttonChalutier {
-    font-size: 22px;
-    text-decoration: none;
-    color: #f8f6f6;
-    background-color: #1c698c;
-    text-align: left;
-    bottom:  125px; 
-    margin-left: 10px;
 }
 
 main {
@@ -90,55 +68,42 @@ main {
     
     
 }
-
+h2 {
+    
+    font-size: 45px;
+    font-size: 22px;
+    text-align: left;
+     
+    line-height: 30px;
+    position: absolute;
+    right: 550px;
+    top: 200px; 
+    left: 20px;
+}
 img{
     float: right;
-    margin-top: 160px;
+    margin-top: 200px;
     margin-right: 100px;
     
     height: 600px;
     width: 400px;
 }
-
-#img2{
+#logo{
     
     margin-top: 0px;
-    margin-right: 10px;
+    margin-left: 100 px;
     
-    height: 200px;
-    width: 400px;
+    height: 66px;
+    width: 99px;
 }
 
-#logo {
-    float: right;
-    margin-top: 0px;
-    margin-right: 10px;
-    
-    height: 92px;
-    width: 123px;
-}
-
-
-#imgegg{
-    float: right;
-    margin-top: 0px;
-    margin-right: 100px;
-    
-    height: 571px;
-    width: 447px;
-}
-
-
-#link {
-    color: #00ffff;
-}
-
+/* Footer */
 footer {
     background-color: #1c698c;
     color: #fff;
     text-align: center;
     font-size: 20px;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     left: 0px;
     width: 100%;
