--- a/stylesMatelo.css
+++ b/stylesMatelo.css
@@ -22,6 +22,15 @@ h1 {
     text-align: center;
 }
 
+#logo{
+    
+    margin-top: -100px;
+    margin-left: 100 px;
+    
+    height: 66px;
+    width: 99px;
+}
+
 h3 {
 
     
