--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
-/* Réinitialisa
 /* Styles de base */
 body {
     font-family: Arial, sans-serif;
-    background-color: #263aec;
+    background-color: #404dc5;
     color: #f2f6f5;
 }
 
@@ -13,7 +12,6 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    
     padding: 10px 0;
 }
 
@@ -77,10 +75,9 @@ main {
     
     font-size: 45px;
     font-size: 22px;
-    text-align: left;
-    
-    
+    text-align: left    
 }
+
 h2 {
     
     font-size: 45px;
@@ -99,14 +96,6 @@ img{
     margin-right: 0px;
     
     height: 600px;
-    width: 400px;
-}
-#logo{
-    
-    margin-top: 0px;
-    margin-right: 10px;
-    
-    height: 200px;
     width: 400px;
 }
 
@@ -135,7 +124,7 @@ footer {
     color: #fff;
     text-align: center;
     font-size: 20px;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0px;
     width: 100%;
@@ -152,4 +141,10 @@ footer {
 }
 #liens {
     color: #00ffff;
+}
+
+#lienback {
+    color: #00ffff;
+    margin-left: 1cm;
+    font-size: 35px;
 }
