--- a/styleprites.css
+++ b/styleprites.css
@@ -1,8 +1,11 @@
-/* Styles de base */
 body {
-    font-family: Arial, sans-serif;
+    font-family: Stencil Std, fantasy;
     background-color: #404dc5;
     color: #f2f6f5;
+    margin: 0;
+    padding: 0;
+    overflow-y: scroll; 
+    background: linear-gradient(to right, #404dc5, #0e384b);
 }
 
 header {
@@ -138,18 +141,34 @@ h2 {
     color: #ababab;
     margin-left: 75px;
 }
-/* Footer */
+
 footer {
     background-color: #1c698c;
     color: #fff;
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
     position: fixed;
     bottom: 0;
-    left: 0px;
+    left: 0;
     width: 100%;
-    padding: 20px 0;
+    padding: 15px 0;
+}
 
+
+@media (max-width: 768px) {
+    .image-button-pair {
+        flex-direction: column; 
+        align-items: flex-start; 
+    }
+
+    .image-button-pair img {
+        width: 100%; 
+        height: auto;
+    }
+
+    .image-button-pair button {
+        width: 100%; 
+    }
 }
 #imgegg{
     float: right;
