--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,12 @@
-/* Styles de base */
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: Stencil Std, fantasy;
     background-color: #404dc5;
     color: #f2f6f5;
+    margin: 0;
+    padding: 0;
+    overflow-y: scroll; 
+    background: linear-gradient(to right, #404dc5, #0e384b);
 }
 
 header {
@@ -123,13 +127,29 @@ footer {
     background-color: #1c698c;
     color: #fff;
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
     position: fixed;
     bottom: 0;
-    left: 0px;
+    left: 0;
     width: 100%;
-    padding: 20px 0;
+    padding: 15px 0;
+}
 
+
+@media (max-width: 768px) {
+    .image-button-pair {
+        flex-direction: column; 
+        align-items: flex-start; 
+    }
+
+    .image-button-pair img {
+        width: 100%; 
+        height: auto;
+    }
+
+    .image-button-pair button {
+        width: 100%; 
+    }
 }
 #imgegg{
     float: right;
@@ -148,3 +168,52 @@ footer {
     margin-left: 1cm;
     font-size: 35px;
 }
+#btnmat {
+    position: absolute;
+    width: 10%;
+    height: auto;
+   top: 40%;
+   left: 20%;
+   font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    color: white;
+    background: #0e384b;
+    padding: 30px 10px;
+    border: none;
+    border-radius: 30px;  
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+}
+
+#btnmat:hover {
+    background: #144f6b;
+    transform: scale(1.05);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+}
+#btnsprites {
+    position: absolute;
+    width: 10%;
+    height: auto;
+   top: 40%;
+   left: 5%;
+   font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    color: white;
+    background: #0e384b;
+    padding: 30px 10px;
+    border: none;
+    border-radius: 30px;  
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+}
+
+#btnsprites:hover {
+    background: #144f6b;
+    transform: scale(1.05);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+}
+
