--- a/stylesMatelo.css
+++ b/stylesMatelo.css
@@ -1,172 +1,135 @@
-/* Styles de base */
 body {
-    font-family: Arial, sans-serif;
+    font-family: Stencil Std, fantasy;
     background-color: #404dc5;
     color: #f2f6f5;
+    margin: 0;
+    padding: 0;
+    overflow-y: scroll; 
+    background: linear-gradient(to right, #404dc5, #0e384b);
 }
+
 
 header {
     background-color: #1c698c;
     color: #f3eeee;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    padding: 10px 0;
+    padding: 10px 20px;
+    z-index: 1000;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 h1 {
-    
-    text-align: center;
+    text-align: left;
+    margin-left: 20px;
+    flex-grow: 1;
 }
 
-#logo{
-    
-    margin-top: -100px;
-    margin-left: 100 px;
-    height: 92px;
-    width: 123px;
+#logo {
+    height: 80px;
+    width: auto;
+    margin-right: 40px;
 }
 
-h3 {
-
-    
-    position: absolute;
-    color: #f3eeee;
-    text-decoration: underline #1c698c;
-    font-size: 40px;
-    top: 500px;
-    left: 30px;
-    width: 100%;
-
-}
-h4 {
-
-    
-    position: absolute;
-    color: #f3eeee;
-    
-    font-size: 20px;
-    top: 600px;
-    left: 30px;
-    width: 100%;
-
-}
-
-#link {
-    color: #00FFFF;
-}
-
-#contact-btn-1 {
-    font-size: 35px;
-    text-decoration: none;
-    text-align: left;
-    color: #f8f6f6;
-    background-color: #1c698c;
-    text-align: left;
-    position: absolute;
-    bottom:  150px; 
-    right:  50px;
-}
-#contact-btn-2 {
-    font-size: 35px;
-    text-decoration: none;
-    text-align: left;
-    color: #f8f6f6;
-    background-color: #1c698c;
-    text-align: left;
-    position: absolute;
-    bottom:  150px; 
-    right:  400px;
-}
-#contact-btn-3 {
-    font-size: 35px;
-    text-decoration: none;
-    text-align: left;
-    color: #f8f6f6;
-    background-color: #1c698c;
-    text-align: left;
-    position: absolute;
-    bottom:  150px; 
-    right:  795px;
-}
-#contact-btn-4 {
-    font-size: 35px;
-    text-decoration: none;
-    text-align: left;
-    color: #f8f6f6;
-    background-color: #1c698c;
-    text-align: left;
-    position: absolute;
-    bottom:  150px; 
-    right:  1230px;
-}
-#contact-btn-5{
-    font-size: 35px;
-    text-decoration: none;
-    text-align: left;
-    color: #f8f6f6;
-    background-color: #1c698c;
-    text-align: left;
-    position: absolute;
-    bottom:  150px; 
-    right:  1630px;
-}
 
 main {
-    
-    font-size: 45px;
-    font-size: 22px;
-    text-align: left;
-    
-    
-}
-h2 {
-    
-    font-size: 45px;
-    font-size: 22px;
-    text-align: left;
-     
-    line-height: 30px;
-    position: absolute;
-    right: 550px;
-    top: 200px; 
-    left: 20px;
+    padding-top: 100px; 
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
 }
 
 
-.image-row {
-    display: flex; 
-    justify-content: space-between; 
-    gap: 10px; 
-    position: absolute;
-    
-    top: 200px; 
-    
-  }
-  
-  .image-row img {
-    width: 18%; 
-    height: auto; 
-  }
+.image-button-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px; 
+}
 
-/* Footer */
+
+.image-button-pair {
+    display: flex;
+    flex-direction: row;
+    align-items: center; 
+    gap: 20px; 
+}
+
+button {
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+    background: #1c698c;
+    padding: 12px 25px;
+    border: none;
+    border-radius: 30px;  /* Arrondi */
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+}
+
+button:hover {
+    background: #144f6b;
+    transform: scale(1.05);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+
+.image-button-pair img {
+   
+    border-radius: 10px;
+    padding-top: 170px;
+    object-fit: cover; 
+    width: 30%;
+}
+
+
+.image-button-pair button {
+    font-size: 20px;
+    text-align: center;
+    color: #f8f6f6;
+    background-color: #1c698c;
+    padding: 12px 20px;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    width: 200px; 
+}
+
+.image-button-pair button:hover {
+    background-color: #144f6b;
+}
+
+
 footer {
     background-color: #1c698c;
     color: #fff;
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
     position: fixed;
     bottom: 0;
-    left: 0px;
+    left: 0;
     width: 100%;
-    padding: 20px 0;
+    padding: 15px 0;
 }
 
 
-#lienback {
-    color: #00ffff;
-    margin-left: 1cm;
-    font-size: 35px;
-}
+@media (max-width: 768px) {
+    .image-button-pair {
+        flex-direction: column; 
+        align-items: flex-start; 
+    }
 
+    .image-button-pair img {
+        width: 100%; 
+        height: auto;
+    }
+
+    .image-button-pair button {
+        width: 100%; 
+    }
+}
