--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 
 body {
-    font-family: Stencil Std, fantasy;
+    font-family: 'Anton',sans-serif;
     background-color: #404dc5;
     color: #f2f6f5;
     margin: 0;
@@ -11,17 +11,23 @@ body {
 
 header {
     background-color: #1c698c;
+    background: linear-gradient(to left, #404dc5, #0e384b);
     color: #f3eeee;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    padding: 10px 0;
+    padding: 3% 0;
 }
 
 h1 {
     
     text-align: center;
+}
+#photoo
+{
+    width: 20%;
+    height: auto;
 }
 
 h2 {
@@ -95,12 +101,9 @@ h2 {
     left: 20px;
 }
 img{
-    float: right;
-    margin-top: 200px;
-    margin-right: 0px;
-    
-    height: 600px;
-    width: 400px;
+    width: 100%;
+    height: auto;
+   
 }
 
 #logo {
@@ -122,7 +125,31 @@ img{
     position:sticky;
 }
 
-/* Footer */
+h7 {
+    font-size: 25px;
+    
+    text-align: center;
+    margin-bottom: 20%;
+     
+    
+}
+
+
+.content-section{
+	position: relative;
+	background-image: url("../img/NewCheeseLand.jpg");
+	background-size: cover;
+	height: 100vh;
+	background-color: transparent;
+	border: none;
+	background-position: center center;
+}
+
+.content-section {
+    padding: 20px;
+}
+
+
 footer {
     background-color: #1c698c;
     color: #fff;
@@ -163,6 +190,8 @@ footer {
     color: #00ffff;
 }
 
+
+
 #lienback {
     color: #00ffff;
     margin-left: 1cm;
@@ -173,7 +202,7 @@ footer {
     width: 10%;
     height: auto;
    top: 40%;
-   left: 20%;
+   left: 30%;
    font-size: 20px;
     font-weight: bold;
     text-align: center;
@@ -197,7 +226,7 @@ footer {
     width: 10%;
     height: auto;
    top: 40%;
-   left: 5%;
+   left: 10%;
    font-size: 20px;
     font-weight: bold;
     text-align: center;
@@ -217,3 +246,165 @@ footer {
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
 }
 
+#btnsprites2 {
+    position: absolute;
+    width: 10%;
+    height: auto;   
+   bottom:  20%;
+   left: 10%;
+   font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    color: white;
+    background: #0e384b;
+    padding: 10% 10%;
+    border: none;
+    border-radius: 30px;  
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+}
+
+#btnsprites2:hover {
+    background: #144f6b;
+    transform: scale(1.05);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+#download {
+    position: absolute;
+    width: 10%;
+    height: auto;
+   top: 40%;
+   left: 60%;
+   font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    color: white;
+    background: #0e384b;
+    padding: 30px 10px;
+    border: none;
+    border-radius: 30px;  
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+}
+
+#download:hover {
+    background: #144f6b;
+    transform: scale(1.05);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+}
+#btnressources {
+    position: absolute;
+    width: 10%;
+    height: auto;
+   top: 40%;
+   left: 80%;   
+   font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    color: white;
+    background: #0e384b;
+    padding: 30px 10px;
+    border: none;
+    border-radius: 30px;  
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+}
+
+#btnressources:hover {
+    background: #144f6b;
+    transform: scale(1.05);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+}
+#btnressources2 {
+    position: absolute;
+    width: 10%;
+    height: 41%;     
+   bottom:  20%;
+   left: 73%;   
+   font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    color: white;
+    background: #0e384b;
+    padding: 10% 10%;
+    border: none;
+    border-radius: 30px;  
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+}
+
+#btnressources2:hover {
+    background: #144f6b;
+    transform: scale(1.05);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+#download2 {
+    position: absolute;
+    width: 10%;
+    height: 41%;     
+   bottom:  20%;
+   left: 52%;   
+   font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    color: white;
+    background: #0e384b;
+    padding: 10% 10%;
+    border: none;
+    border-radius: 30px;  
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+}
+
+#download2:hover {
+    background: #144f6b;
+    transform: scale(1.05);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+#btnmat2 {
+    position: absolute;
+    width: 10%;
+    height: 41%;     
+   bottom:  20%;
+   left: 31%;   
+   font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    color: white;
+    background: #0e384b;
+    padding: 10% 10%;
+    border: none;
+    border-radius: 30px;  
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+}
+
+#btnmat2:hover {
+    background: #144f6b;
+    transform: scale(1.05);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+h7 {
+    font-size: 30px;
+    text-align: center;
+}
+
+#imglog
+{
+   
+    height: 10%;
+    width: 10%;
+    position: relative;
+    margin-left: 45%;
+    
+}
