--- a/styleprites.css
+++ b/styleprites.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Stencil Std, fantasy;
+    font-family:  'Anton',sans-serif;
     background-color: #404dc5;
     color: #f2f6f5;
     margin: 0;
@@ -9,7 +9,7 @@ body {
 }
 
 header {
-    background-color: #1c698c;
+    background: linear-gradient(to left, #404dc5, #0e384b);
     color: #f3eeee;
     position: absolute;
     top: 0;
@@ -129,6 +129,29 @@ h2 {
     margin-left: 50px;
     height: 323px;
     width: 400px;
+}
+
+#bullet
+{
+    margin-top: 5%;
+    margin-left: 30%;
+    height: 500px;
+    width: auto;
+}
+#mobs
+{
+    margin-top: 5%;
+    margin-left: 50%;
+    height: 500px;
+    width: auto;
+}
+
+#chal2
+{
+    margin-top: 5%;
+    margin-left: 20%;
+    height: 500px;
+    width: auto;
 }
 
 #legenderight{
