--- a/styleprites.css
+++ b/styleprites.css
@@ -166,7 +166,7 @@ h2 {
 }
 
 footer {
-    background-color: #1c698c;
+    background-color: #033a54;
     color: #fff;
     text-align: center;
     font-size: 18px;
