--- a/stylesMatelo.css
+++ b/stylesMatelo.css
@@ -106,7 +106,7 @@ button:hover {
 
 
 footer {
-    background-color: #1c698c;
+    background-color: #033a54;
     color: #fff;
     text-align: center;
     font-size: 18px;
