--- a/stylespresentation.css
+++ b/stylespresentation.css
@@ -121,9 +121,9 @@ img{
     position:sticky;
 }
 
-/* Footer */
+
 footer {
-    background-color: #1c698c;
+    background-color: #033a54;
     color: #fff;
     text-align: center;
     font-size: 18px;
