--- a/styles.css
+++ b/styles.css
@@ -126,10 +126,11 @@ img{
 }
 
 h7 {
-    font-size: 25px;
+    font-size: 40px;
+    margin-left: 30%;
     
     text-align: center;
-    margin-bottom: 20%;
+    
      
     
 }
@@ -151,7 +152,7 @@ h7 {
 
 
 footer {
-    background-color: #1c698c;
+    background-color: #033a54;
     color: #fff;
     text-align: center;
     font-size: 18px;
@@ -202,7 +203,7 @@ footer {
     width: 10%;
     height: auto;
    top: 40%;
-   left: 30%;
+   left: 28%;
    font-size: 20px;
     font-weight: bold;
     text-align: center;
@@ -276,7 +277,7 @@ footer {
     width: 10%;
     height: auto;
    top: 40%;
-   left: 60%;
+   left: 62%;
    font-size: 20px;
     font-weight: bold;
     text-align: center;
@@ -376,6 +377,7 @@ footer {
    bottom:  20%;
    left: 31%;   
    font-size: 20px;
+   
     font-weight: bold;
     text-align: center;
     color: white;
@@ -394,10 +396,7 @@ footer {
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
 }
 
-h7 {
-    font-size: 30px;
-    text-align: center;
-}
+
 
 #imglog
 {
