--- a/stylesdocuments.css
+++ b/stylesdocuments.css
@@ -45,7 +45,7 @@ h3
 #cdc
 {
     margin-top: 10%;
-    margin-left: 40%;
+    margin-left: 38%;
     font-size: 20px;
     font-weight: bold;
     color: white;
@@ -65,8 +65,8 @@ h3
 }
 #defense1
 {
-    margin-top: 10%;
-    margin-left: 20%;
+    margin-top: 0%;
+    margin-left: 36%;
     font-size: 20px;
     font-weight: bold;
     color: white;
@@ -87,7 +87,7 @@ h3
 #defense2
 {
     margin-top: 10%;
-    margin-left: 0%;
+    margin-left: 36%;
     font-size: 20px;
     font-weight: bold;
     color: white;
@@ -100,6 +100,27 @@ h3
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
 }
 #defense2:hover
+{
+    background: #144f6b;
+    transform: scale(1.05);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+}
+#defense3
+{
+    margin-top: 10%;
+    margin-left: 36%;
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+    background: #1c698c;
+    padding: 10% 10%;
+    border: none;
+    border-radius: 30px;  
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+}
+#defense3:hover
 {
     background: #144f6b;
     transform: scale(1.05);
@@ -183,7 +204,7 @@ button:hover {
 
 
 footer {
-    background-color: #1c698c;
+    background-color: #033a54;
     color: #fff;
     text-align: center;
     font-size: 18px;
